make sure grid is placed below scrollbars!

--- a/style.css
+++ b/style.css
@@ -337,3 +337,5 @@ html #cssmenu ul ul li.odd {
 .top-bar #cssmenu ul ul li:hover {
     background: rgb(255,255,128);
 }
+
+html .grid {z-index: -1;}
